# larpsaver

./: .gitignore  CMakeLists.txt
examples/: opengl_example.c
examples/glad/: glad.h
include/: larpsaver.h
src/: larpsaver.c  win32.c  xscreensaver.c
src/platform/: win32.c
tools/: WatMakefile  t
